Zoom to mouse point #43554

Closed
opened 2015-02-03 21:39:19 +01:00 by Aaron Carlisle · 11 comments
Member

System Information
Windows 8.0
Intel HD 4600
Blender Version
Broken: 2.73
Worked: (optional)

Short description of error
Zoom to mouse point acts as a pan when zooming in all the way in 2d editors
Exact steps for others to reproduce the error

  • Enable zoom to mouse point in user preferences
  • open compositor
  • press the + key to zoom in
  • once the zoom limit is reached, the view will pan but not zoom. (this is the bug)

edited, original report - @ideasman42

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.73 Worked: (optional) **Short description of error** Zoom to mouse point acts as a pan when zooming in all the way in 2d editors **Exact steps for others to reproduce the error** - Enable zoom to mouse point in user preferences - open compositor - press the + key to zoom in - once the zoom limit is reached, the view will pan but not zoom. *(this is the bug)* ---- *edited, original report - @ideasman42*
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This works as I would expect,

Are you suggesting that +/- keys should ignore the cursor location?

This works as I would expect, Are you suggesting that +/- keys should ignore the cursor location?
Author
Member

its happen with mouse wheel too

but it is very hard to the mouse wheel spinning

let me restate the problem:

In 2d editors (VSE, Compositor, etc.) when you zoom in to the point that Blender will no zoom in it will pan towards the mouse point when zoom to mouse
position is enabled

its happen with mouse wheel too but it is very hard to the mouse wheel spinning let me restate the problem: In 2d editors (VSE, Compositor, etc.) when you zoom in to the point that Blender will no zoom in it will pan towards the mouse point when zoom to mouse position is enabled
Author
Member

Is this the requested information?

Is this the requested information?

From the description, This is working as intended.

You need to be very exact in explaining what you expect and what currently happens but by the sounds of it this isnt a bug.

From the description, This is working as intended. You need to be very exact in explaining what you expect and what currently happens but by the sounds of it this isnt a bug.
Author
Member

So right now when in 2d editors it starts panning around when it has reached its zoom limits. I expect it to not do anything when this happens

So right now when in 2d editors it starts panning around when it has reached its zoom limits. I expect it to not do anything when this happens

This issue was referenced by 6b107daf23

This issue was referenced by 6b107daf23c5b8b6b7b9aebfa7384e103928a8d3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6b107daf23.

Closed by commit 6b107daf23.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43554
No description provided.