Fix T43554: Zoom to mousepos makes 2D Views pan after zoom limits are reached

There are a couple of things that I don't like here, but it seems like
the best way to handle this for now.